17 Jun 2013: Wouter
	- Fixup manpage syntax.

14 Jun 2013: Wouter
	- get_option and set_option support for log-time-ascii, python-script
	  val-sig-skew-min and val-sig-skew-max.  log-time-ascii takes effect
	  immediately.  The others are mostly useful for libunbound users.

13 Jun 2013: Wouter
	- get_option, set_option, unbound-checkconf -o and libunbound
	  getoption and setoption support cache-min-ttl and cache-max-ttl.

10 Jun 2013: Wouter
	- Fix#501: forward-first does not recurse, when forward name is ".".
	- iana portlist update.
	- Max include depth is unlimited.

27 May 2013: Wouter
	- Update acx_pthreads.m4 to ax_pthreads.4 (2013-03-29), and apply
	  patch to it to not fail when -Werror is also specified, from the
	  autoconf-archives.
	- iana portlist update.

21 May 2013: Wouter
	- Explain bogus and secure flags in libunbound more.

16 May 2013: Wouter
	- Fix#499 use-after-free in out-of-memory handling code (thanks Jake
	  Montgomery).
	- Fix#500 use on non-initialised values on socket bind failures.

15 May 2013: Wouter
	- Fix round-robin doesn't work with some Windows clients (from Ilya
	  Bakulin).

3 May 2013: Wouter
	- update acx_nlnetlabs.m4 to v23, sleep w32 fix.

26 April 2013: Wouter
	- add unbound-control insecure_add and insecure_remove for the
	  administration of negative trust anchors.

25 April 2013: Wouter
	- Implement max-udp-size config option, default 4096 (thanks
	  Daisuke Higashi).
	- Robust checks on dname validity from rdata for dname compare.
	- updated iana portlist.

19 April 2013: Wouter
	- Fixup snprintf return value usage, fixed libunbound_get_option.

18 April 2013: Wouter
	- fix bug #491: pick program name (0th argument) as syslog identity.
	- own implementation of compat/snprintf.c.

15 April 2013: Wouter
	- Fix so that for a configuration line of include: "*.conf" it is not
	  an error if there are no files matching the glob pattern.
	- unbound-anchor review: BIO_write can return 0 successfully if it